--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
 
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-phone"></i> 11 99845-6754</li>
-              <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
+              <li><i class="icon-phone"></i> 54 9956-8974</li>
+              <li><i class="icon-map-pin"></i> R. Luís de Almeida, 1095</li>
               <li><i class="icon-mail"></i> contato@beautysalon.com</li>
             </ul>
           </div>
