--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <ul class="grid">
               <li><i class="icon-phone"></i> 54 9956-8974</li>
               <li><i class="icon-map-pin"></i> R. Luís de Almeida, 1095</li>
-              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
+              <li><i class="icon-mail"></i> wendel.conferi@gmail.com</li>
             </ul>
           </div>
         </div>
